# xiexin-da-agent

./: .env.example  .gitignore  Architect.md  config.json  controller.py  orchestrator.py  pyproject.toml  readme.md  requirements.txt  soul.md
.github/workflows/: cd-deploy.yml  ci-gate.yml
Backend/: __init__.py  conversation_context.py  info_reactions.py  llm_provider.py  search_provider.py  settings.py
Backend/features/: conversation_context.py  info_reactions.py  shared_uploads.py
Backend/integrations/: email_sender.py  llm_provider.py
Backend/runtime/: __init__.py  contracts.py  engine.py  registry.py  router.py
Deployer/: README.md  bootstrap_ubuntu.sh  healthcheck.sh  load_on_ubuntu.sh  preflight_ubuntu.sh  pull_and_start.sh
Deployer/nginx/: xiexin-da-agent.conf
Deployer/systemd/: xiexin-backend.service  xiexin-frontend.service
Docs/: prd.md
Docs/release/: release-10.0.md  release-12.0.md  release-12.1.md  release-13.1.md  release-13.3.md  release-13.5.md  release-14.0.md  release-14.3.1.md  release-14.3.md  release-15.0.md  release-15.1.md  release-2.0.md  release-2.4.1.md  release-3.0.md  release-4.0.md  release-5.0.md  release-5.1.md  release-5.3.md  release-6.0.md  release-9.0.md  release-9.1.md
Front/: README.md
Front/react-ui/: index.html  package-lock.json  package.json  vite.config.js
Gateway/: __init__.py
Gateway/Back/: LLM-provider.py  __init__.py  ali_test.py  llm-provider_function.md  llm_provider.py  settings.py
Gateway/Front/: README.md  app.py  app_v1_0.py  (+1 more)
Launcher/: Go_XIEXin.py  README.md  restart_stack.ps1  start_frontend_silent.ps1  start_stack.ps1  stop_frontend.ps1  stop_stack.ps1
Memo/: ai_dev_log_2026-03-25.md  front-todo-v7.0.md  release-7.0.md
Prompt/: README.md  __init__.py  soul.md  soul_xiexin_da.md  welcome.py
apps/: README.md  __init__.py
tests/: test_ccb_handler_chain.py  test_ccb_handler_skill_response.py  test_email_sender.py  test_llm_provider.py  test_send_email_confirmation.py  test_welcome.py
(+91 files in other folders)
