[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xiexin-da-agent"
version = "8.0.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.14,<2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv311"  

[tool.hatch.build.targets.wheel]
packages = ["Gateway"]

[tool.hatch.envs.default.scripts]
back-llm-provider = "python -m Gateway.Back.llm_provider"
back-ali-test = "python -m Gateway.Back.ali_test"
