[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xiexin-da-agent"
version = "14.3.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.14,<2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv311"  

[tool.hatch.build.targets.wheel]
packages = ["Backend", "apps", "Prompt"]

[tool.hatch.envs.default.scripts]
back-llm-provider = "python -m Backend.integrations.llm_provider"
back-ali-test = "python -m Backend.ali_test"

[tool.xiexin]
config_source = ".env and environment variables"
config_file_removed = "config.json"
backend_entry = "apps.api.server"
frontend_dir = "Front/react-ui"
